vlib/v/checker/tests/fn_result_option_call_infix_err.vv
fn foo() !string {
	return 'foo'
}

fn main() {
	assert foo()! == 'foo'
	assert foo()? == 'foo'
}
